# pac-claude

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  playtest.sh
assets/maze/: classic.json
assets/shaders/: basic.wgsl  instanced.wgsl  phong.wgsl  ui.wgsl
crates/pac-game/: Cargo.toml
crates/pac-game/src/: animation.rs  collision.rs  ghost.rs  ghost_mode.rs  lib.rs  maze.rs  maze_renderer.rs  pacman.rs  pellet.rs  sound.rs  ui.rs
crates/pac-game/src/ai/: blinky.rs  inky.rs  mod.rs  pinky.rs
crates/pac-math/: Cargo.toml
crates/pac-math/src/: bounds.rs  lib.rs  transform.rs
crates/pac-render/: Cargo.toml
crates/pac-render/src/: asset.rs  buffer.rs  camera.rs  context.rs  depth.rs  lib.rs  light.rs  material.rs  mesh.rs  pipeline.rs  renderer.rs  scene.rs  texture.rs
crates/pac-window/: Cargo.toml
crates/pac-window/src/: input.rs  lib.rs  time.rs  window.rs
src/: main.rs
