[package]
name = "pac"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pac"
path = "src/main.rs"

[dependencies]
pac-math = { workspace = true }
pac-render = { workspace = true }
pac-window = { workspace = true }
pac-game = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[workspace]
members = [
    "crates/pac-math",
    "crates/pac-render",
    "crates/pac-window",
    "crates/pac-game",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# GPU abstraction
wgpu = "23"
# Window/input
winit = "0.30"
# Math
glam = "0.29"
# GPU data casting
bytemuck = { version = "1.14", features = ["derive"] }
# Texture loading
image = "0.25"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async blocking
pollster = "0.4"
# Logging
log = "0.4"
env_logger = "0.11"
# Internal crates
pac-math = { path = "crates/pac-math" }
pac-render = { path = "crates/pac-render" }
pac-window = { path = "crates/pac-window" }
pac-game = { path = "crates/pac-game" }
