[package]
name = "pac-render"
version.workspace = true
edition.workspace = true

[dependencies]
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
log = { workspace = true }
pac-math = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
